# QKD_Failure_Detection

./: .gitignore  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_github.sh
.github/: CONTRIBUTING.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  research_question.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml  code-quality.yml  docs.yml  release.yml
config/: default_config.yaml
demos/: demo_anomaly_detection.py  demo_ml_detection.py  demo_security_monitor.py  demo_signal_analysis.py  run_all_demos.py
notebooks/: failure_patterns.ipynb  ml_performance.ipynb  qkd_analysis.ipynb  research_validation.ipynb
reports/: Internship_Report_QKD_LaTeX.tex  QKD_Complete_Report_with_Plots.tex
scripts/: setup_environment.sh
src/: anomaly_detector.py  ml_detector.py  qkd_simulator.py  security_monitor.py  signal_analyzer.py  utils.py
tests/: conftest.py  test_anomaly_detector.py  test_config.py  test_detectors.py  test_ml_detector.py  test_qkd_simulator.py  test_security_monitor.py  test_signal_analyzer.py  test_utils.py
